cv-button added

--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@
                                                     class="menu-title sr-only">Hackerrank</span></a></li>
                                         </ul>
                                     </nav>
+                                    <a class="cv-button" href="images/MustafaSelimGunaydin.pdf" download> C V
+                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="wave-bg"></div>
         </header>
         <div class="section pt-4 px-3 px-lg-4" id="about">
@@ -274,12 +277,18 @@
                     <div class="card-body px-2 py-1">
                         <p style="font-style: oblique">libraries Selenium, Cucumber, JUnit, Log4j </p>
                         <h5>Web Testing</h5>
-                        <li>verify the account, favorites and basket section</li></br>
-                        <li>search and verify the search page</li></br>
-                        <li>randomly select a product</li></br>
-                        <li>verify the product price</li></br>
-                        <li>add product the basket and increase the quantity</li></br>
-                        <li>remove product and verify the basket is empty</li></br>
+                        <li>verify the account, favorites and basket section</li>
+                        </br>
+                        <li>search and verify the search page</li>
+                        </br>
+                        <li>randomly select a product</li>
+                        </br>
+                        <li>verify the product price</li>
+                        </br>
+                        <li>add product the basket and increase the quantity</li>
+                        </br>
+                        <li>remove product and verify the basket is empty</li>
+                        </br>
                     </div>
                 </div>
             </div>
@@ -546,7 +555,7 @@
                             <div>
                                 <h3 class="h5 mb-1">API & API Tests</h3>
                                 <div class="text-muted text-small">BTK Academy <small>(2021)</small>
-                                    <a style="margin-left: 20px" href="images/btkapitest.PNG" target="_blank">
+                                    <a style="margin-left: 20px" href="images/btkapitest.png" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -566,6 +575,25 @@
                                 </div>
                             </div>
                             <img src="images/spring.png" width="48" height="48" alt="spring"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Jira Fundamentals Badge</h3>
+                                <div class="text-muted text-small">Atlassian <small>(2021)</small>
+                                    <a style="margin-left: 20px"
+                                       href="https://university.atlassian.com/student/award/TxqfjceApw8YoJ7W1GdtXnmz"
+                                       target="_blank">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <img src="images/jira.png" width="48" height="48" alt="jira"/>
                         </div>
                     </div>
                 </div>
