--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </div>
                 <div class="text-center">
                     <i class="fas fa-graduation-cap"></i>
-                    <div class="pb-3 fa-2x">Kocaeli University</div>
+                    <div class="pb-2 fa-2x">Kocaeli University</div>
                     <div class="pb-2 fa-2x fw-lighter">Electrical Engineering</div>
                     <div class="pb-3 fw-bolder">2016 - 2020</div>
                 </div>
@@ -156,7 +156,7 @@
                 <div class="text-center">
                     <i class="fas fa-graduation-cap"></i>
                     <div class="pb-3 fa-2x">Kanuni Anatolian High School</div>
-                    <div class="pb-3 fw-bolder">2012 - 2016</div>
+                    <div class="pb-2 fw-bolder">2012 - 2016</div>
                 </div>
             </div>
         </div>
@@ -166,9 +166,15 @@
                     <h2 class="marker marker-center">Experience</h2>
                 </div>
                 <div class="text-center">
-                    <div class="pb-3 fa-2x">Industrial Automation</div>
                     <div class="pb-2 fa-2x fw-lighter">Electrical Engineering</div>
                     <div class="pb-3 fw-bolder">August 2020 - September 2021</div>
+                </div>
+                </br>
+                </br>
+                <div class="text-center">
+                    <div class="pb-1 fa-2x">Borusan CAT @via TesterYou</div>
+                    <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
+                    <div class="pb-3 fw-bolder">February 2022 - March 2022</div>
                 </div>
             </div>
         </div>
@@ -179,7 +185,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
+                        <div class="card mb-3" data-aos="fade-right" data-aos-delay="150">
                             <div class="card-header px-3 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
@@ -199,7 +205,7 @@
                     </div>
 
                     <div class="col-md-6">
-                        <div class="card mb-3" data-aos="fade-right" data-aos-delay="150">
+                        <div class="card mb-3" data-aos="fade-left" data-aos-delay="150">
                             <div class="card-header px-2 py-2">
                                 <div class="d-flex justify-content-between">
                                     <div>
@@ -261,7 +267,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -317,7 +323,7 @@
             </div>
 
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -340,7 +346,7 @@
             </div>
 
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -369,7 +375,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -422,7 +428,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -455,7 +461,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-right" data-aos-delay="100">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -487,7 +493,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="card mb-3" data-aos="fade-left" data-aos-delay="300">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
@@ -594,6 +600,20 @@
                                 </div>
                             </div>
                             <img src="images/jira.png" width="48" height="48" alt="jira"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Software Test Bootcamp</h3>
+                                <div class="text-muted text-small">TesterYou <small>(2022)</small>
+                                </div>
+                            </div>
+                            <img src="images/defect.png" width="48" height="48" alt="defect"/>
                         </div>
                     </div>
                 </div>
