--- a/index.html
+++ b/index.html
@@ -176,6 +176,20 @@
                     <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
                     <div class="pb-3 fw-bolder">February 2022 - March 2022</div>
                 </div>
+                </br>
+                </br>
+                <div class="text-center">
+                    <div class="pb-1 fa-2x">Koç Digital @via TesterYou</div>
+                    <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
+                    <div class="pb-3 fw-bolder">April 2022 - June 2022</div>
+                </div>
+                </br>
+                </br>
+                <div class="text-center">
+                    <div class="pb-1 fa-2x">Trendyol</div>
+                    <div class="pb-2 fa-2x fw-lighter">Associate Software Developer In Test</div>
+                    <div class="pb-3 fw-bolder">June 2022 - Present</div>
+                </div>
             </div>
         </div>
         <div class="section px-3 px-lg-4 pt-5" id="skills">
