--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                                     class="menu-title sr-only">Hackerrank</span></a></li>
                                         </ul>
                                     </nav>
-                                    <a class="cv-button" href="images/MustafaSelimGunaydin.pdf" download> C V
+                                    <a class="cv-button" href="images/MSG.pdf" download> C V
                                     </a>
                                 </div>
                             </div>
@@ -166,15 +166,35 @@
                     <h2 class="marker marker-center">Experience</h2>
                 </div>
                 <div class="text-center">
-                    <div class="pb-2 fa-2x fw-lighter">Electrical Engineering</div>
-                    <div class="pb-3 fw-bolder">August 2020 - September 2021</div>
+                    <div class="pb-1 fa-2x">Insider</div>
+                    <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
+                    <div class="pb-3 fw-bolder">December 2022 - Present</div>
+                    <li>Conducted manual and automated testing of web and mobile applications</li> 
+                    <li>Developed and executed test plans, test cases, and test scripts</li> 
+                    <li>Identified, documented, and tracked software defects using bug tracking tools</li> 
+                    <li>Collaborated with developers, product managers, and designers to ensure high-quality software delivery</li> 
+                    <li>Contributed to process improvement initiatives and use tools like AWS, Jenkins, Grafana</li>
                 </div>
-                </br>
-                </br>
+            </br>
+            </br>      
+                <div class="text-center">
+                    <div class="pb-1 fa-2x">Trendyol</div>
+                    <div class="pb-2 fa-2x fw-lighter">Associate Software Developer In Test</div>
+                    <div class="pb-3 fw-bolder">June 2022 - August 2022</div>
+                    <li>Writing & Running Automation Tests in isolated platform</li>
+                    <li>BDD API Acceptance Testing with Java Rest-Assured</li>
+                    <li>Maintain existing tests, monitor failures and report bugs</li>
+                    <li>Understanding of CI/CD, STLC, Docker, Kubernetes</li>
+                </div>
+            </br>
+            </br>               
                 <div class="text-center">
                     <div class="pb-1 fa-2x">Borusan CAT @via TesterYou</div>
                     <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
                     <div class="pb-3 fw-bolder">February 2022 - March 2022</div>
+                    <li>Understanding Agile processes and keeping in touch all the time with Scrum team</li>
+                    <li>Test Case Preparing and writing with Azure and maintenance of existing test cases</li>
+                    <li>API testing with Postman</li>
                 </div>
                 </br>
                 </br>
@@ -182,14 +202,10 @@
                     <div class="pb-1 fa-2x">Koç Digital @via TesterYou</div>
                     <div class="pb-2 fa-2x fw-lighter">Software Test Engineer</div>
                     <div class="pb-3 fw-bolder">April 2022 - June 2022</div>
+                    <li>Find and report bugs with focus on technical and supporting details</li>
                 </div>
                 </br>
                 </br>
-                <div class="text-center">
-                    <div class="pb-1 fa-2x">Trendyol</div>
-                    <div class="pb-2 fa-2x fw-lighter">Associate Software Developer In Test</div>
-                    <div class="pb-3 fw-bolder">June 2022 - Present</div>
-                </div>
             </div>
         </div>
         <div class="section px-3 px-lg-4 pt-5" id="skills">
@@ -531,6 +547,23 @@
                         <p>● External Data files</p>
                         <p>● Test development with Karate Framework</p>
                         <p style="font-style: italic; margin-left: 15px">and more..</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Continuous Integration with Jenkins</h3>
+                                <div class="text-muted text-small">Test Automation University <small>(2023)</small>
+                                    <a style="margin-left: 20px" href="images/jenkins.png" target="_blank">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <img src="images/oop.png" width="48" height="48" alt="object-oriented"/>
+                        </div>
                     </div>
                 </div>
             </div>
