--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <img src="images/oop.png" width="48" height="48" alt="object-oriented"/>
+                            <img src="images/server.png" width="48" height="48" alt="object-oriented"/>
                         </div>
                     </div>
                 </div>
