--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img
-                            class="avatar img-thumbnail shadow" src="images/portrait.png" width="350" height="450"/>
+                    <div class="col-md-4 offset-md-1" data-aos="fade-left" data-aos-delay="100" style="margin-top: 50px;"><img
+                            class="avatar img-thumbnail shadow" src="images/portrait.jpg" width="480" height="480"/>
                     </div>
                 </div>
             </div>
@@ -591,7 +591,7 @@
                             <div>
                                 <h3 class="h5 mb-1">API & API Tests</h3>
                                 <div class="text-muted text-small">BTK Academy <small>(2021)</small>
-                                    <a style="margin-left: 20px" href="images/btkapitest.png" target="_blank">
+                                    <a style="margin-left: 20px" href="images/btk1.png" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
@@ -653,6 +653,23 @@
                     <div class="card-header px-3 py-2">
                         <div class="d-flex justify-content-between">
                             <div>
+                                <h3 class="h5 mb-1">GitHub Actions for Testing</h3>
+                                <div class="text-muted text-small">Test Automation University <small>(2023)</small>
+                                    <a style="margin-left: 20px" href="images/github-actions.png" target="_blank">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <img src="images/github.png" width="48" height="48" alt="object-oriented"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-left" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
                                 <h3 class="h5 mb-1">Continuous Integration with Jenkins</h3>
                                 <div class="text-muted text-small">Test Automation University <small>(2023)</small>
                                     <a style="margin-left: 20px" href="images/jenkins.png" target="_blank">
@@ -661,6 +678,23 @@
                                 </div>
                             </div>
                             <img src="images/server.png" width="48" height="48" alt="object-oriented"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-3" data-aos="fade-right" data-aos-delay="200">
+                    <div class="card-header px-3 py-2">
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <h3 class="h5 mb-1">Cloud Computing with Amazon Web Services (AWS)</h3>
+                                <div class="text-muted text-small">BTK Academy <small>(2023)</small>
+                                    <a style="margin-left: 20px" href="images/aws.png" target="_blank">
+                                        <i class="fas fa-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <img src="images/awslogo.png" width="48" height="48" alt="object-oriented"/>
                         </div>
                     </div>
                 </div>
